# chips-gen

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  cosmicGen.cc  cosmicPlots.C  gen-setup.sh  gen-tidy.sh  setup.sh
config/data/: numi_experiments_fluxreader.root  sim_flux_files_fluxreader.root
scripts/: make_flux_plots.C  make_nue_flux.C
src/: cosmicgen.cc
